2019-01-03  Karen   <cerebrum@gagarin.uit.no>

    * cim_datasource.py: updated to handle utf-8 data instead of iso-8859-1.

2018-11-19 kennethj <cerebrum@gagarin.uit.no>
	* fronter_lib:	updated to handle utf-8 data instead of riso-8859-1

2018-11-08  Karen   <cerebrum@cleomedes.uit.no>

    * fronter_lib.py: changed import Database into import database.postgres.


2018-11-07 kennethj <cerebrum@cleomedes.uit.no>
	* bofhd_uit_cmds.py:	Due to lots of changes since last time we updated this file, it was decided to use the uio version of this file	
							and instead include the few changes uit has into that file.

2018-11-06 kennethj <cerebrum@cleomedes.uit.no>
	* bofhd_uit_cmds.py: Added new import from Cerebrum.modules.bofhd.bofhd_email import BofhdEmailAuth.
						class UiOAuth now also needs to inherit from BofhdEmailAuth.

2018-10-25 kennethj <cerebrum@cleomedes.uit.no>
	* Email.py: updated database import. it has been changed from Database  into database.<databasetype>
	* import_FS.py: changed encoding from iso-8859-1 to utf-8
	* bofhd_uit_cmds.py: changed import Database into import database.postgres
2018-10-23  kennethj <cerebrum@gagarin.uit.no>
	* ADsync.py:	updated to read json instead of pickle
2018-10-23  kennethj <cerebrum@gagarin.uit.no>
	* bofhd_uit_cmds.py:	updated to read json instead of pickle

2018-10-21  kennethj <cerebrum@gagarin.uit.no>
	* PosixLDIF.py: updated to handle UTF-8

2018-10-21  kennethj <cerebrum@gagarin.uit.no>
	* OrgLDIF.py: updated to handle UTF-8

2018-10-21  kennethj <cerebrum@gagarin.uit.no>
	* access_SYSX:	updated to handle unicode

2018-10-20  kennethj <cerebrum@gagarin.uit.no>
	* sito_utils.py:	updated to handle unicode

2018-10-20  kennethj <cerebrum@gagarin.uit.no>
	* PagaDataParser.py:	updated to handle unicode
	
2018-10-19  kennethj <cerebrum@gagarin.uit.no>
    * Account.py: account.simplify_name() has been replaced by Cerebrum.utils.transliterate..for_posix()
	
2018-10-15  Karen   <cerebrum@gagarin.uit.no>
